[package]
name = "stm32g474-threadbot"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0", path = "../embassy/embassy-stm32", features = [ "defmt", "time-driver-any", "stm32g474re", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.6.2", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.4.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
usbd-hid = "0.8.1"

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-can = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0.0"

[profile.release]
debug = 2
